--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/bg_unselect_item">
+        android:background="@drawable/bg_unselect_item"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_5sdp">
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
@@ -26,22 +28,30 @@
             android:textColor="@color/black"
             android:layout_margin="@dimen/_8sdp"
             android:maxLength="40"/>
-        <TextView
-            android:id="@+id/tvCategory"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_15sdp"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/black"
-            android:layout_marginStart="@dimen/_8sdp"/>
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:gravity="bottom|end"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic"/>
+            android:layout_height="@dimen/_20sdp">
+            <TextView
+                android:id="@+id/tvCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/_8ssp"
+                android:textColor="@color/black"
+                android:layout_marginStart="@dimen/_8sdp"/>
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="@dimen/_8sdp"
+                android:gravity="bottom|end"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_9sdp"
+                android:textStyle="italic"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 </LinearLayout>
